# swig-python-example

module/: CMakeLists.txt
module/include/: Sample.h
module/interface/: Sample.i
module/src/: Sample.cpp
test/: DataService.py  Sample.py  _Sample.pyd
