CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

# This is a CMake example for Python
SET(ProjectName "SWIG_CMAKE_TEST")
SET(SWIG_FILE_PREFIX_NAME "Sample")
SET(SWIG_INTERFACE_NAME ${SWIG_FILE_PREFIX_NAME}.i)

SET(TargetSrcPath ${CMAKE_CURRENT_SOURCE_DIR}/src)
SET(TargetIncPath ${CMAKE_CURRENT_SOURCE_DIR}/include)
SET(TargetLibraryPath ${CMAKE_CURRENT_SOURCE_DIR}/library)
SET(TargetInterfacePath ${CMAKE_CURRENT_SOURCE_DIR}/interface)

SET(SWIG_VERSION "3.0.4")
SET(SWIG_EXECUTABLE ${TargetLibraryPath}/swigwin-3.0.4/swig.exe)
SET(SWIG_DIR ${TargetLibraryPath}/swigwin-3.0.4)

FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

MESSAGE(STATUS "SWIG_FOUND: " ${SWIG_FOUND})
MESSAGE(STATUS "SWIG_DIR: " ${SWIG_DIR})
MESSAGE(STATUS "SWIG_EXECUTABLE: " ${SWIG_EXECUTABLE})
MESSAGE(STATUS "SWIG_VERSION: " ${SWIG_VERSION})

SET(PYTHON_LIBRARY ${TargetLibraryPath}/Python34/libs/win32/python34.lib)
SET(PYTHON_INCLUDE_DIR ${TargetLibraryPath}/Python34/include)

FIND_PACKAGE(PythonLibs REQUIRED)

MESSAGE(STATUS "PYTHONLIBS_FOUND: " ${PYTHONLIBS_FOUND})
MESSAGE(STATUS "PYTHON_LIBRARIES: " ${PYTHON_LIBRARIES})
MESSAGE(STATUS "PYTHON_INCLUDE_PATH: " ${PYTHON_INCLUDE_PATH})
MESSAGE(STATUS "PYTHON_INCLUDE_DIRS: " ${PYTHON_INCLUDE_DIRS})
MESSAGE(STATUS "PYTHON_DEBUG_LIBRARIES: " ${PYTHON_DEBUG_LIBRARIES})

INCLUDE_DIRECTORIES(
    ${TargetIncPath}
    ${TargetSrcPath}
    ${PYTHON_INCLUDE_DIR}
)

SET(CMAKE_SWIG_FLAGS "")

SET_SOURCE_FILES_PROPERTIES(${TargetInterfacePath}/${SWIG_INTERFACE_NAME}  PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(${TargetInterfacePath}/${SWIG_INTERFACE_NAME}  PROPERTIES SWIG_FLAGS "-c++")
SET_SOURCE_FILES_PROPERTIES(${TargetInterfacePath}/${SWIG_INTERFACE_NAME}  PROPERTIES SWIG_FLAGS "-py3")

SWIG_ADD_MODULE(
    ${SWIG_FILE_PREFIX_NAME} 
    python 
    ${TargetInterfacePath}/${SWIG_INTERFACE_NAME} 
    ${TargetSrcPath}/${SWIG_FILE_PREFIX_NAME}.cpp
)
SWIG_LINK_LIBRARIES(${SWIG_FILE_PREFIX_NAME} 
    optimized ${PYTHON_LIBRARIES}
)

